--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -21,7 +21,7 @@
       <figure id="img-div">
         <img
           id="image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+          src="img/tribute-page-main-image.jpg"
           alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
         />
         <figcaption id="img-caption">
