--- a/index.html
+++ b/index.html
@@ -7,35 +7,75 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
+
   <body>
     <div class="container">
       <div class="top">
-        <h1>freeCodeCamp Survey Form</h1>
-        <p>
+        <h1 id="title">freeCodeCamp Survey Form</h1>
+        <p id="description">
           Thank you for taking the same time to helo us improve the platform
         </p>
       </div>
 
       <div class="surveyBox">
-        <form>
-          <label for="name"> Name </label>
-          <input type="text" name="" id="name" />
+        <form id="survey-form">
+          <label for="name" id="name-label"> Name </label>
+          <input
+            required
+            type="text"
+            name=""
+            id="name"
+            placeholder="Enter your name"
+          />
 
-          <label for="email">Email</label>
-          <input type="email" name="" id="" />
+          <label for="email" id="email-label">Email</label>
+          <input
+            required
+            type="email"
+            name=""
+            id="email"
+            placeholder="Enter your email"
+          />
 
-          <label for="age">Age</label>
-          <input type="number" name="" id="" min="0" />
+          <label for="age" id="number-label">Age</label>
+          <input
+            type="number"
+            name="number"
+            id="number"
+            min="10"
+            max="99"
+            placeholder="age"
+          />
+
+          <label for="">Which option best describes your current role?</label>
+          <select name="" id="">
+            <option value="" selected>Select Current Role</option>
+            <option value="">Student</option>
+            <option value="">Full Time Job</option>
+            <option value="">Full Time Learner</option>
+            <option value="">Prefer not to say</option>
+            <option value="">Other</option>
+          </select>
+
+          <label for="">Would you recommend freeCodeCamp to a friend? </label>
+          <input
+            type="radio"
+            name="recommend"
+            id=""
+            value="Definitely"
+          />Definitely
+          <input type="radio" name="recommend" id="" value="Maybe" />Maybe
+          <input type="radio" name="recommend" id="" value="Not sure" />Not sure
 
           <label for="optionSection"
-            >Which Option best describes your current role?</label
-          >
-          <select name="" id="">
-            <option value="" selected>Select an option</option>
-            <option value="">Challenges</option>
-            <option value="">Projects</option>
-            <option value="">Community</option>
-            <option value="">Open Source</option>
+            >What is your favorite feature of freeCodeCamp?
+          </label>
+          <select name="" id="dropdown">
+            <option selected>Select an option</option>
+            <option>Challenges</option>
+            <option>Projects</option>
+            <option>Community</option>
+            <option>Open Source</option>
           </select>
 
           <label for=""
@@ -43,27 +83,55 @@
             <span>(Check all that apply)</span></label
           >
 
-          <input type="checkbox" name="" id="" />Front-end Projects
-          <input type="checkbox" name="" id="" />Back-end Projects
-          <input type="checkbox" name="" id="" />Data Visualization
-          <input type="checkbox" name="" id="" />Challenges
-          <input type="checkbox" name="" id="" />Open Source Community
-          <input type="checkbox" name="" id="" />Gitter help rooms
-          <input type="checkbox" name="" id="" />Videos
-          <input type="checkbox" name="" id="" />City Meetups
-          <input type="checkbox" name="" id="" />Wiki
-          <input type="checkbox" name="" id="" />Forum
-          <input type="checkbox" name="" id="" />Additional Courses
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="Front-end Projects"
+          />Front-end Projects
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="Back-end Projects"
+          />Back-end Projects
+          <input type="checkbox" name="" id="" value="Data Visualization" />Data
+          Visualization
+
+          <input type="checkbox" name="" id="" value="Challenges" />Challenges
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="Open Source Community"
+          />Open Source Community
+          <input type="checkbox" name="" id="" value="Gitter" />Gitter help
+          rooms <input type="checkbox" name="" id="" value="Videos" />Videos
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="City Meetups"
+            aria-valuemax="City"
+          />City Meetups
+          <input type="checkbox" name="" id="" value="Wiki" />Wiki
+          <input type="checkbox" name="" id="" value="Forum" />Forum
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="Additional Courses"
+          />Additional Courses
 
           <textarea
             name=""
-            id=""
+            id="textarea"
             cols="30"
             rows="10"
             placeholder="Enter your comment here..."
           ></textarea>
+          <button id="submit" type="submit">Submit</button>
         </form>
-        <button type="submit">Submit</button>
       </div>
     </div>
   </body>
