--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -18,120 +18,199 @@
       </div>
 
       <div class="surveyBox">
-        <form id="survey-form">
-          <label for="name" id="name-label"> Name </label>
-          <input
-            required
-            type="text"
-            name=""
-            id="name"
-            placeholder="Enter your name"
-          />
+        <div class="formSection">
+          <form id="survey-form">
+            <div class="formContent">
+              <label for="name" id="name-label">Name</label>
+              <input
+                required
+                type="text"
+                name=""
+                id="name"
+                placeholder="Enter your name"
+                class="inputItem"
+              />
+            </div>
 
-          <label for="email" id="email-label">Email</label>
-          <input
-            required
-            type="email"
-            name=""
-            id="email"
-            placeholder="Enter your email"
-          />
+            <div class="formContent">
+              <label for="email" id="email-label">Email</label>
+              <input
+                required
+                type="email"
+                name=""
+                id="email"
+                placeholder="Enter your email"
+                class="inputItem"
+              />
+            </div>
 
-          <label for="age" id="number-label">Age</label>
-          <input
-            type="number"
-            name="number"
-            id="number"
-            min="10"
-            max="99"
-            placeholder="age"
-          />
+            <div class="formContent">
+              <label for="age" id="number-label">Age</label>
+              <input
+                type="number"
+                name="number"
+                id="number"
+                min="10"
+                max="99"
+                placeholder="Age"
+                class="inputItem"
+              />
+            </div>
 
-          <label for="">Which option best describes your current role?</label>
-          <select name="" id="">
-            <option value="" selected>Select Current Role</option>
-            <option value="">Student</option>
-            <option value="">Full Time Job</option>
-            <option value="">Full Time Learner</option>
-            <option value="">Prefer not to say</option>
-            <option value="">Other</option>
-          </select>
+            <div class="formContent">
+              <label for=""
+                >Which option best describes your current role?</label
+              >
+              <br />
+              <select name="" id="" class="inputItem">
+                <option value="" selected>Select Current Role</option>
+                <option value="">Student</option>
+                <option value="">Full Time Job</option>
+                <option value="">Full Time Learner</option>
+                <option value="">Prefer not to say</option>
+                <option value="">Other</option>
+              </select>
+            </div>
 
-          <label for="">Would you recommend freeCodeCamp to a friend? </label>
-          <input
-            type="radio"
-            name="recommend"
-            id=""
-            value="Definitely"
-          />Definitely
-          <input type="radio" name="recommend" id="" value="Maybe" />Maybe
-          <input type="radio" name="recommend" id="" value="Not sure" />Not sure
+            <div class="formContent">
+              <label for=""
+                >Would you recommend freeCodeCamp to a friend?
+              </label>
 
-          <label for="optionSection"
-            >What is your favorite feature of freeCodeCamp?
-          </label>
-          <select name="" id="dropdown">
-            <option selected>Select an option</option>
-            <option>Challenges</option>
-            <option>Projects</option>
-            <option>Community</option>
-            <option>Open Source</option>
-          </select>
+              <div class="radioCheckBox">
+                <input
+                  type="radio"
+                  name="recommend"
+                  id="definitely"
+                  value="Definitely"
+                />
+                <label for="definitely">Definitely</label>
+              </div>
+              <div class="radioCheckBox">
+                <input type="radio" name="recommend" id="maybe" value="Maybe" />
+                <label for="maybe">Maybe</label>
+              </div>
+              <div class="radioCheckBox">
+                <input
+                  type="radio"
+                  name="recommend"
+                  id="notSure"
+                  value="Not sure"
+                />
+                <label for="notSure">Not sure</label>
+              </div>
+            </div>
 
-          <label for=""
-            >What would you like to see improved?
-            <span>(Check all that apply)</span></label
-          >
+            <div class="formContent">
+              <label for="optionSection"
+                >What is your favorite feature of freeCodeCamp?
+              </label>
+              <select name="" id="dropdown" class="inputItem">
+                <option selected>Select an option</option>
+                <option>Challenges</option>
+                <option>Projects</option>
+                <option>Community</option>
+                <option>Open Source</option>
+              </select>
+            </div>
 
-          <input
-            type="checkbox"
-            name=""
-            id=""
-            value="Front-end Projects"
-          />Front-end Projects
-          <input
-            type="checkbox"
-            name=""
-            id=""
-            value="Back-end Projects"
-          />Back-end Projects
-          <input type="checkbox" name="" id="" value="Data Visualization" />Data
-          Visualization
+            <div class="formContent">
+              <label
+                >What would you like to see improved?
+                <span>(Check all that apply)</span></label
+              >
 
-          <input type="checkbox" name="" id="" value="Challenges" />Challenges
-          <input
-            type="checkbox"
-            name=""
-            id=""
-            value="Open Source Community"
-          />Open Source Community
-          <input type="checkbox" name="" id="" value="Gitter" />Gitter help
-          rooms <input type="checkbox" name="" id="" value="Videos" />Videos
-          <input
-            type="checkbox"
-            name=""
-            id=""
-            value="City Meetups"
-            aria-valuemax="City"
-          />City Meetups
-          <input type="checkbox" name="" id="" value="Wiki" />Wiki
-          <input type="checkbox" name="" id="" value="Forum" />Forum
-          <input
-            type="checkbox"
-            name=""
-            id=""
-            value="Additional Courses"
-          />Additional Courses
+              <div class="radioCheckbox">
+                <input
+                  type="checkbox"
+                  name=""
+                  id="cb1"
+                  value="Front-end Projects"
+                /><label for="">Front-end Projects</label>
+              </div>
+              <div class="radioCheckbox">
+                <input
+                  type="checkbox"
+                  name=""
+                  id="cb2"
+                  value="Back-end Projects"
+                />
+                <label for="cb2">Back-end Projects</label>
+              </div>
+              <div class="radioCheckbox">
+                <input
+                  type="checkbox"
+                  name=""
+                  id="cb3"
+                  value="Data Visualization"
+                />
+                <label for="cb3">Data Visualization</label>
+              </div>
+              <div class="radioCheckbox">
+                <input type="checkbox" name="" id="cb4" value="Challenges" />
+                <label for="cb4">Challenges</label>
+              </div>
+              <div class="inputCheckbox">
+                <input
+                  type="checkbox"
+                  name=""
+                  id="cb5"
+                  value="Open Source Community"
+                />
+                <label for="cb5">Open Source Community</label>
+              </div>
+              <div class="inputCheckbox">
+                <input type="checkbox" name="" id="cb6" value="Gitter" />
+                <label for="cb6">Gitter help rooms</label>
+              </div>
+              <div class="inputCheckbox">
+                <input type="checkbox" name="" id="cb7" value="Videos" />
+                <label for="cb7">Videos</label>
+              </div>
+              <div class="inputCheckbox">
+                <input
+                  type="checkbox"
+                  name=""
+                  id="cb8"
+                  value="City Meetups"
+                  aria-valuemax="City"
+                />
+                <label for="cb8">City Meetups</label>
+              </div>
+              <div class="inputCheckbox">
+                <input type="checkbox" name="" id="cb9" value="Wiki" />
+                <label for="cb9">Wiki</label>
+              </div>
+              <div class="inputCheckbox">
+                <input type="checkbox" name="" id="cb10" value="Forum" />
+                <label for="cb10">Forum</label>
+              </div>
 
-          <textarea
-            name=""
-            id="textarea"
-            cols="30"
-            rows="10"
-            placeholder="Enter your comment here..."
-          ></textarea>
-          <button id="submit" type="submit">Submit</button>
-        </form>
+              <div class="inputCheckbox">
+                <input
+                  type="checkbox"
+                  name=""
+                  id="cb11"
+                  value="Additional Courses"
+                />
+                <label for="cb11">Additional Courses</label>
+              </div>
+            </div>
+
+            <div class="formContent">
+              <textarea
+                name=""
+                id="textarea"
+                cols="30"
+                rows="10"
+                placeholder="Enter your comment here..."
+              ></textarea>
+              <div class="btn">
+                <button id="submit" type="submit">Submit</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </body>
