Survey Form | Modified project

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -62,7 +62,7 @@
                 >Which option best describes your current role?</label
               >
               <br />
-              <select name="" id="" class="inputItem">
+              <select name="" id="select" class="inputItem">
                 <option value="" selected>Select Current Role</option>
                 <option value="">Student</option>
                 <option value="">Full Time Job</option>
@@ -115,18 +115,17 @@
             </div>
 
             <div class="formContent">
-              <label
-                >What would you like to see improved?
-                <span>(Check all that apply)</span></label
-              >
-
+              <p class="topText">
+                What would you like to see improved?
+                <span>(Check all that apply)</span>
+              </p>
               <div class="radioCheckbox">
                 <input
                   type="checkbox"
                   name=""
                   id="cb1"
                   value="Front-end Projects"
-                /><label for="">Front-end Projects</label>
+                /><label for="cb1"> Front-end Projects</label>
               </div>
               <div class="radioCheckbox">
                 <input
@@ -198,6 +197,7 @@
             </div>
 
             <div class="formContent">
+              <label for="textArea">Any comments or suggestions? </label>
               <textarea
                 name=""
                 id="textarea"
