Product Landing Page | Subscribe Section completed

--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -26,6 +26,17 @@
         </nav>
       </div>
     </header>
-    <div class="container"></div>
+    <div class="container">
+      <div class="subscribeSection">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <input
+          type="email"
+          name=""
+          id=""
+          placeholder="Enter your email address"
+        />
+        <button type="button"><span>Get Started</span></button>
+      </div>
+    </div>
   </body>
 </html>
