Product Landing Page | Modified style.css

--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -35,7 +35,7 @@
           id=""
           placeholder="Enter your email address"
         />
-        <button type="button"><span>Get Started</span></button>
+        <button type="button">Get Started</button>
       </div>
     </div>
   </body>
