Product Landing Page | Grid Container completed

--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -27,6 +33,7 @@
       </div>
     </header>
     <div class="container">
+      <!-- subscribeSection start -->
       <div class="subscribeSection">
         <h2>Handcrafted, home-made masterpieces</h2>
         <input
@@ -37,6 +44,49 @@
         />
         <button type="button">Get Started</button>
       </div>
+      <!-- subscribeSection end -->
+
+      <!-- icons start -->
+      <div class="gridContainer">
+        <div class="grid">
+          <div class="icons">
+            <i class="fa fa-3x fa-fire"></i>
+          </div>
+          <div class="texts">
+            <h2>Premium Materials</h2>
+            <p>
+              Our trombones use the shiniest brass which is sourced locally.
+              This will increase the longevity of your purchase.
+            </p>
+          </div>
+        </div>
+        <div class="grid">
+          <div class="icons">
+            <i class="fa fa-3x fa-truck"></i>
+          </div>
+          <div class="texts">
+            <h2>Fast Shipping</h2>
+            <p>
+              We make sure you recieve your trombone as soon as we have finished
+              making it. We also provide free returns if you are not satisfied.
+            </p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="icon3 icons">
+            <i class="fa fa-3x fa-battery-full"></i>
+          </div>
+          <div class="texts">
+            <h2>Quality Assurance</h2>
+            <p>
+              For every purchase you make, we will ensure there are no damages
+              or faults and we will check and test the pitch of your instrument.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- icons end -->
     </div>
   </body>
 </html>
