Product Landing Page | footer completed

--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -157,6 +157,20 @@
       </div>
       <!-- cardsContainer end -->
 
+      <!-- footer start -->
+      <footer>
+        <div class="footerList">
+          <ul>
+            <li>
+              <a href="#">Privacy</a>
+            </li>
+            <li><a href="#">Term</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div>Copyright 2016, Original Trombones play sound</div>
+      </footer>
+      <!-- footer end -->
       <!-- container end -->
     </div>
   </body>
