Product Landing Page | Added hamburger button and made responsive

--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -22,16 +22,28 @@
           style="max-width: 300px"
         />
       </div>
-      <div class="navbar">
-        <nav>
-          <ul>
-            <li>Features</li>
-            <li>How It Works</li>
-            <li>Pricing</li>
+      <div>
+        <nav class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">How It Works</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Pricing</a>
+            </li>
           </ul>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
         </nav>
       </div>
     </header>
+
     <div class="container">
       <!-- subscribeSection start -->
       <div class="subscribeSection">
@@ -173,5 +185,6 @@
       <!-- footer end -->
       <!-- container end -->
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
