--- a/Technical Documentation Page/index.html
+++ b/Technical Documentation Page/index.html
@@ -328,9 +328,9 @@
           <p>
             In the case of multiple conditions only the first logical condition
             which evaluates to true will be executed. To execute multiple
-            statements, group them within a block statement ({ ... }) . In
-            general, it's good practice to always use block statements,
-            especially when nesting if statements:
+            statements, group them within a block statement ({ }) . In general,
+            it's good practice to always use block statements, especially when
+            nesting if statements:
           </p>
           <code
             >if (condition) { statement_1_runs_if_condition_is_true;
@@ -344,13 +344,13 @@
             when glancing over the code. For example, do not use the following
             code:
           </p>
-          <code>if (x = y) { /* statements here */ } </code>
+          <code>if (x = y) { } </code>
           <p>
             If you need to use an assignment in a conditional expression, a
             common practice is to put additional parentheses around the
             assignment. For example:
           </p>
-          <code>if ((x = y)) { /* statements here */ } </code>
+          <code>if ((x = y)) { } </code>
         </div>
         <div class="contentContainer">
           <h1 class="title" id="while_statement">while statement</h1>
