Technical Documentation  Page | .content completed

--- a/Technical Documentation Page/index.html
+++ b/Technical Documentation Page/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="sidebar">
-        <div class="title headItem">JS Documentation</div>
+        <div class="headItem">JS Documentation</div>
         <div class="sidebox">
           <div class="sideItem"><a href="#Introduction"> Introduction</a></div>
           <div class="sideItem">
