Technical Documentation Page | Project Completed

--- a/Technical Documentation Page/index.html
+++ b/Technical Documentation Page/index.html
@@ -10,9 +10,11 @@
   <body>
     <div class="container">
       <div class="headItem">JS Documentation</div>
+      <hr class="hr1" />
       <div class="sidebar">
         <div class="sidebox">
           <div class="sideItem"><a href="#Introduction"> Introduction</a></div>
+
           <div class="sideItem">
             <a href="#What_you_should_already_know">
               What you should already know</a
