--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -5,7 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Personal Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>
+        <nav>
+          <a href="#">About</a>
+          <a href="#">Work</a>
+          <a href="#">Contact</a>
+        </nav>
+      </header>
+      <div class="content">
+        <div class="desc">
+          <h1>Hey, I am Mimic</h1>
+          <p>a web developer</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
