Personal Portfolio | .content-2 completed

--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -16,12 +16,80 @@
           <a href="#">Contact</a>
         </nav>
       </header>
+      <!-- content start -->
       <div class="content">
-        <div class="desc">
+        <div class="content-1">
           <h1>Hey, I am Mimic</h1>
           <p>a web developer</p>
         </div>
+        <!-- content-2 start -->
+        <div class="content-2">
+          <p class="title">These are some of my projects</p>
+          <div class="projectBox">
+            <div class="project">
+              <div class="projectHead">
+                <img
+                  class="project-image"
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="projectBody">Tribute Page</div>
+            </div>
+            <div class="project">
+              <div class="projectHead">
+                <img
+                  class="project-image"
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
+                />
+              </div>
+              <div class="projectBody">Random Quote Machine</div>
+            </div>
+            <div class="project">
+              <div class="projectHead">
+                <img
+                  class="project-image"
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+                />
+              </div>
+              <div class="projectBody">Javascript Calculator</div>
+            </div>
+            <div class="project">
+              <div class="projectHead">
+                <img
+                  class="project-image"
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+                  alt="project"
+                />
+              </div>
+              <div class="projectBody">Map Data Across the Globe</div>
+            </div>
+
+            <div class="project">
+              <div class="projectHead">
+                <img
+                  class="project-image"
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
+                />
+              </div>
+              <div class="projectBody">Wikipedia Viewer</div>
+            </div>
+            <div class="project">
+              <div class="projectHead">
+                <img
+                  class="project-image"
+                  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png"
+                  alt="project"
+                />
+              </div>
+              <div class="projectBody">Tic Tac Toe Game</div>
+            </div>
+          </div>
+          <button class="showBTN" type="button">Show all <span>></span></button>
+        </div>
+        <!-- content-2 start -->
       </div>
+      <!-- content end -->
     </div>
   </body>
 </html>
