Personal Portfolio | Project design completed

--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- BOOTSTRAP CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Personal Portfolio</title>
   </head>
   <body>
@@ -89,7 +98,50 @@
         </div>
         <!-- content-2 start -->
       </div>
+
+      <div class="content-3">
+        <div class="text">
+          <h1>Let's work together...</h1>
+          <p>How do you take your coffee?</p>
+        </div>
+        <div class="social">
+          <div class="mediaDiv">
+            <i class="fa-brands fa-square-facebook"></i>
+            <span>Facebook</span>
+          </div>
+          <div class="mediaDiv">
+            <i class="fa-brands fa-github"></i>
+            <span>GitHub</span>
+          </div>
+          <div class="mediaDiv">
+            <i class="fa-brands fa-twitter"></i>
+            <span>Twitter</span>
+          </div>
+          <div class="mediaDiv">
+            <i class="fa-solid fa-at"></i>
+            <span>Send a mail</span>
+          </div>
+          <div class="mediaDiv">
+            <i class="fa-solid fa-mobile-screen"></i>
+            <span>Call me</span>
+          </div>
+        </div>
+      </div>
       <!-- content end -->
+
+      <footer>
+        <div class="left">
+          **This is just a fake portfolio. All the projects and contact details
+          given are not real.
+        </div>
+        <div class="right">
+          &copy; Created for freeCodeCamp
+          <a href="https://www.freecodecamp.org/"
+            ><i class="fa-brands fa-free-code-camp"></i
+          ></a>
+        </div>
+      </footer>
     </div>
+    <!-- container end -->
   </body>
 </html>
