--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -5,15 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
-    <!-- BOOTSTRAP CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <title>Personal Portfolio</title>
   </head>
   <body>
@@ -35,7 +26,7 @@
         <div class="content-2">
           <p class="title">These are some of my projects</p>
           <div class="projectBox">
-            <div class="project">
+            <div class="project project1">
               <div class="projectHead">
                 <img
                   class="project-image"
@@ -43,27 +34,39 @@
                   alt=""
                 />
               </div>
-              <div class="projectBody">Tribute Page</div>
+              <div class="projectBody">
+                <span class="code">&lt;</span>
+                Tribute Page
+                <span class="code">&#47;&gt;</span>
+              </div>
             </div>
-            <div class="project">
+            <div class="project project2">
               <div class="projectHead">
                 <img
                   class="project-image"
                   src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
                 />
               </div>
-              <div class="projectBody">Random Quote Machine</div>
+              <div class="projectBody">
+                <span class="code">&lt;</span>
+                Random Quote Machine
+                <span class="code">&#47;&gt;</span>
+              </div>
             </div>
-            <div class="project">
+            <div class="project project3">
               <div class="projectHead">
                 <img
                   class="project-image"
                   src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
                 />
               </div>
-              <div class="projectBody">Javascript Calculator</div>
+              <div class="projectBody">
+                <span class="code">&lt;</span>
+                Javascript Calculator
+                <span class="code">&#47;&gt;</span>
+              </div>
             </div>
-            <div class="project">
+            <div class="project project4">
               <div class="projectHead">
                 <img
                   class="project-image"
@@ -71,19 +74,27 @@
                   alt="project"
                 />
               </div>
-              <div class="projectBody">Map Data Across the Globe</div>
+              <div class="projectBody">
+                <span class="code">&lt;</span>
+                Map Data Across the Globe
+                <span class="code">&#47;&gt;</span>
+              </div>
             </div>
 
-            <div class="project">
+            <div class="project project5">
               <div class="projectHead">
                 <img
                   class="project-image"
                   src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
                 />
               </div>
-              <div class="projectBody">Wikipedia Viewer</div>
+              <div class="projectBody">
+                <span class="code">&lt;</span>
+                Wikipedia Viewer
+                <span class="code">&#47;&gt;</span>
+              </div>
             </div>
-            <div class="project">
+            <div class="project project6">
               <div class="projectHead">
                 <img
                   class="project-image"
@@ -91,10 +102,16 @@
                   alt="project"
                 />
               </div>
-              <div class="projectBody">Tic Tac Toe Game</div>
+              <div class="projectBody">
+                <span class="code">&lt;</span>
+                Tic Tac Toe Game
+                <span class="code">&#47;&gt;</span>
+              </div>
             </div>
           </div>
-          <button class="showBTN" type="button">Show all <span>></span></button>
+          <a href="https://freecodecamp.org" class="showBTN"
+            >Show All <span>></span></a
+          >
         </div>
         <!-- content-2 start -->
       </div>
@@ -143,5 +160,8 @@
       </footer>
     </div>
     <!-- container end -->
+
+    <!-- SCRIPT TAG -->
+    <script src="script.js"></script>
   </body>
 </html>
