--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- FONT AWESOME CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Personal Portfolio</title>
   </head>
   <body>
@@ -152,9 +161,9 @@
           given are not real.
         </div>
         <div class="right">
-          &copy; Created for freeCodeCamp
-          <a href="https://www.freecodecamp.org/"
-            ><i class="fa-brands fa-free-code-camp"></i
+          &copy; Created for
+          <a href="https://www.freecodecamp.org/" target="_blank"
+            >freeCodeCamp <i class="fa-brands fa-free-code-camp"></i
           ></a>
         </div>
       </footer>
