Personal Portfolio | Project modified

--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -20,19 +20,22 @@
     <div class="container">
       <header>
         <nav>
-          <a href="#">About</a>
-          <a href="#">Work</a>
-          <a href="#">Contact</a>
+          <a href="#content-1">About</a>
+          <a href="#content-2">Work</a>
+          <a href="#content-3">Contact</a>
         </nav>
       </header>
       <!-- content start -->
       <div class="content">
-        <div class="content-1">
+        <!-- content-1 start -->
+        <div class="content-1" id="content-1">
           <h1>Hey, I am Mimic</h1>
           <p>a web developer</p>
         </div>
+        <!-- content-1 end -->
+
         <!-- content-2 start -->
-        <div class="content-2">
+        <div class="content-2" id="content-2">
           <p class="title">These are some of my projects</p>
           <div class="projectBox">
             <div class="project project1">
@@ -122,36 +125,38 @@
             >Show All <span>></span></a
           >
         </div>
-        <!-- content-2 start -->
-      </div>
+        <!-- content-2 end -->
 
-      <div class="content-3">
-        <div class="text">
-          <h1>Let's work together...</h1>
-          <p>How do you take your coffee?</p>
+        <!-- content-3 start -->
+        <div class="content-3" id="content-3">
+          <div class="text">
+            <h1>Let's work together...</h1>
+            <p>How do you take your coffee?</p>
+          </div>
+          <div class="social">
+            <div class="mediaDiv">
+              <i class="fa-brands fa-square-facebook"></i>
+              <span>Facebook</span>
+            </div>
+            <div class="mediaDiv">
+              <i class="fa-brands fa-github"></i>
+              <span>GitHub</span>
+            </div>
+            <div class="mediaDiv">
+              <i class="fa-brands fa-twitter"></i>
+              <span>Twitter</span>
+            </div>
+            <div class="mediaDiv">
+              <i class="fa-solid fa-at"></i>
+              <span>Send a mail</span>
+            </div>
+            <div class="mediaDiv">
+              <i class="fa-solid fa-mobile-screen"></i>
+              <span>Call me</span>
+            </div>
+          </div>
         </div>
-        <div class="social">
-          <div class="mediaDiv">
-            <i class="fa-brands fa-square-facebook"></i>
-            <span>Facebook</span>
-          </div>
-          <div class="mediaDiv">
-            <i class="fa-brands fa-github"></i>
-            <span>GitHub</span>
-          </div>
-          <div class="mediaDiv">
-            <i class="fa-brands fa-twitter"></i>
-            <span>Twitter</span>
-          </div>
-          <div class="mediaDiv">
-            <i class="fa-solid fa-at"></i>
-            <span>Send a mail</span>
-          </div>
-          <div class="mediaDiv">
-            <i class="fa-solid fa-mobile-screen"></i>
-            <span>Call me</span>
-          </div>
-        </div>
+        <!-- content-3 end -->
       </div>
       <!-- content end -->
 
