Personal Portfolio | Added target attribute

--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <a href="https://freecodecamp.org" class="showBTN"
+          <a href="https://freecodecamp.org" class="showBTN" target="_blank"
             >Show All <span>></span></a
           >
         </div>
